--- a/src/app/gifs/results/results.component.html
+++ b/src/app/gifs/results/results.component.html
@@ -1,16 +1,19 @@
-<div class="row">
-  <div *ngFor="let gif of result" class="col-md-4 col-sm-6">
-    <div class="card">
-      <img
-        [src]="gif.images.downsized_medium.url"
-        [alt]="gif.title"
-        class="card-img-top"
-      />
-      <div class="card-body">
-        <p class="card-text">
-          {{ gif.title }}
-        </p>
+
+  <div *ngIf="result.length > 0; else empty" class="row p-2">
+    <div *ngFor="let gif of result" class="col-md-4 col-sm-6 animate__animated animate__zoomIn">
+      <div class="card">
+        <img [src]="gif.images.downsized_medium.url" [alt]="gif.title" class="card-img-top" />
+        <div class="card-body">
+          <p class="card-text">
+            {{ gif.title }}
+          </p>
+        </div>
       </div>
     </div>
   </div>
-</div>
+  <ng-template #empty>
+    <div class="alert alert-info" role="alert">
+      There aren't gifs with that name !
+    </div>
+  </ng-template>
+
