--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -1,8 +1,19 @@
 html,
 body {
   height: 100%;
+  background: #000000;
 }
 
+
+h5{
+  color: rgb(192, 192, 0);
+  font-weight: bold;
+}
+
+hr{
+  color: yellow;
+  height: 2px !important;
+}
 
 #sidebar{
   height: 100%;
